[gd_scene load_steps=7 format=2]

[ext_resource path="res://scens/Main.gd" type="Script" id=1]
[ext_resource path="res://ui/base_ui/bg.png" type="Texture" id=2]
[ext_resource path="res://ui/base_ui/button36x12.png" type="Texture" id=3]
[ext_resource path="res://ui/base_ui/button36x12-pressed.png" type="Texture" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://font/FreePixel.ttf"

[sub_resource type="DynamicFont" id=2]
use_mipmaps = true
font_data = SubResource( 1 )

[node name="Main" type="Node2D"]
position = Vector2( 104, 120 )
script = ExtResource( 1 )

[node name="Controls" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Controls"]
visible = false
margin_right = 800.0
margin_bottom = 500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Controls/Control"]
margin_right = 80.0
margin_bottom = 50.0
rect_scale = Vector2( 10, 10 )
texture = ExtResource( 2 )
patch_margin_left = 4
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="startGameButton" type="TextureButton" parent="Controls/Control"]
margin_left = 304.0
margin_top = 128.0
margin_right = 340.0
margin_bottom = 140.0
rect_scale = Vector2( 6, 6 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="startGameLabel" type="Label" parent="Controls/Control/startGameButton"]
anchor_left = 0.481
anchor_top = 0.5
anchor_right = 0.481
anchor_bottom = 0.5
margin_left = -11.816
margin_top = -2.0
margin_right = 68.184
margin_bottom = 14.0
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = SubResource( 2 )
text = "Start Game"

[node name="name" type="NinePatchRect" parent="Controls/Control"]
visible = false
modulate = Color( 1, 1, 1, 0.870588 )
margin_right = 80.0
margin_bottom = 50.0
rect_scale = Vector2( 10, 10 )
texture = ExtResource( 2 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="namedit" type="LineEdit" parent="Controls/Control/name"]
margin_left = 15.2
margin_top = 23.2
margin_right = 270.2
margin_bottom = 47.2
rect_scale = Vector2( 0.2, 0.2 )
align = 1
placeholder_text = "Nome ou apelido"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="startGameLabel2" type="Label" parent="Controls/Control/name"]
anchor_left = 0.481
anchor_top = 0.5
anchor_right = 0.481
anchor_bottom = 0.5
margin_left = -13.68
margin_top = 4.60001
margin_right = 210.32
margin_bottom = 20.6
rect_scale = Vector2( 0.14, 0.14 )
custom_fonts/font = SubResource( 2 )
text = "Ele ser√° usado no highscore!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="Controls"]

[connection signal="pressed" from="Controls/Control/startGameButton" to="." method="StartGame"]
[connection signal="text_entered" from="Controls/Control/name/namedit" to="." method="get_user_name"]
[connection signal="request_completed" from="Controls/HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
